js/src/xpconnect/loader/mozJSComponentLoader.cpp
@@ -986,6 +986,8 @@ mozJSComponentLoader::StartFastLoad(nsIFastLoadService *flSvc)
                                                   kFastLoadWriteDelay,
                                                   nsITimer::TYPE_ONE_SHOT);
     } else {
+        // Note, that since CloseFastLoad nulls out mFastLoadTimer,
+        // SetDelay() will only be called on a timer that hasn't fired.
         rv = mFastLoadTimer->SetDelay(kFastLoadWriteDelay);
     }
 
